"SSL Certification has been Added"

--- a/ShobarDokanBackoffice/src/main/resources/application.properties
+++ b/ShobarDokanBackoffice/src/main/resources/application.properties
@@ -6,3 +6,14 @@ spring.thymeleaf.suffix=.html
 spring.datasource.url=jdbc:mysql://localhost:3306/demo_app_db
 spring.datasource.username=root
 spring.datasource.password=root123
+
+#spring.social.facebook.app-id=567782503639906
+#spring.social.facebook.app-secret=e0ee83464d84f3245e515a99699b9839
+
+
+
+server.port=8443
+server.ssl.key-store=classpath:keystore.sdokan
+server.ssl.key-store-password= aaaaa@
+server.ssl.keyStoreType= PKCS12
+server.ssl.keyAlias= tomcat
