--- a/ShobarDokanBackoffice/src/main/resources/application.properties
+++ b/ShobarDokanBackoffice/src/main/resources/application.properties
@@ -3,12 +3,13 @@ spring.thymeleaf.suffix=.html
 
 #spring.session.store-type=hash_map
 
-spring.datasource.url=jdbc:mysql://localhost:3306/demo_app_db
+#spring.datasource.url=jdbc:mysql://localhost:3306/demo_app_db
+spring.datasource.url=jdbc:mysql://192.168.1.217:3306/shobardokan
 spring.datasource.username=root
 spring.datasource.password=root123
 
-#spring.social.facebook.app-id=567782503639906
-#spring.social.facebook.app-secret=e0ee83464d84f3245e515a99699b9839
+spring.social.facebook.app-id=567782503639906
+spring.social.facebook.app-secret=e0ee83464d84f3245e515a99699b9839
 
 
 
