--- a/ShobarDokanBackoffice/src/main/resources/application.properties
+++ b/ShobarDokanBackoffice/src/main/resources/application.properties
@@ -8,10 +8,10 @@ spring.datasource.url=jdbc:mysql://192.168.1.217:3306/shobardokan
 spring.datasource.username=root
 spring.datasource.password=root123
 
-spring.social.facebook.app-id=567782503639906
-spring.social.facebook.app-secret=e0ee83464d84f3245e515a99699b9839
+spring.social.facebook.appId=1934142040015390
+spring.social.facebook.appSecret=47aa654648964dcad8d85edafef6a62e
 
-
+logging.level.com.tp365.shobardokan=debug
 
 server.port=8443
 server.ssl.key-store=classpath:keystore.sdokan
