--- a/ShobarDokanBackoffice/src/main/resources/application.properties
+++ b/ShobarDokanBackoffice/src/main/resources/application.properties
@@ -11,6 +11,15 @@ spring.datasource.password=root123
 spring.social.facebook.appId=1934142040015390
 spring.social.facebook.appSecret=47aa654648964dcad8d85edafef6a62e
 
+# Account Kit Details
+#accountkit.appsecret=592ca9ff3ce287ca700403b8ecbb99d6
+#account_kit.appId=624430304620726
+
+accountkit.appsecret=f961ec7c86ef725e0483718e048e05fc
+account_kit.appId=186265032284393
+phone_user_access_token.url= https://graph.accountkit.com/v1.3/access_token?grant_type=authorization_code&code=%s&access_token=AA|%s|%s
+
+
 logging.level.com.tp365.shobardokan=debug
 
 server.port=8443
