Added all files in WIP

--- a/ShobarDokanBackoffice/src/main/resources/application.properties
+++ b/ShobarDokanBackoffice/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.thymeleaf.suffix=.html
 #spring.session.store-type=hash_map
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/demo_app_db
-spring.datasource.url=jdbc:mysql://192.168.1.217:3306/shobardokan
+spring.datasource.url=jdbc:mysql://localhost:3306/shobardokan?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root123
+spring.datasource.password=Maya1111!!
 
 spring.social.facebook.appId=1934142040015390
 spring.social.facebook.appSecret=47aa654648964dcad8d85edafef6a62e
@@ -26,4 +26,4 @@ server.port=8443
 server.ssl.key-store=classpath:keystore.sdokan
 server.ssl.key-store-password= aaaaa@
 server.ssl.keyStoreType= PKCS12
-server.ssl.keyAlias= tomcat
+server.ssl.keyAlias=tomcat
